--- a/homepage.html
+++ b/homepage.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" type="text/css" href="css/detail.css"/>
     <link rel="stylesheet" type="text/css" href="css/mui.min.css"/>
     <link rel="stylesheet" type="text/css" href="css/loaders.min.css"/>
+    <link rel="stylesheet" type="text/css" href="css/loading.css"/>
+    <link rel="stylesheet" href="css/loading2.css">
     <link rel="stylesheet" href="css/swiper.min.css">
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/loading2.css">
@@ -77,8 +79,6 @@
 
 <body style="background: #F2F2F2;">
 <div class="contents" style="display:none">
-
-
 <div class="warp warptwo clearfloat" >
     <div class="detail clearfloat">
         <div class="tg_more">
