--- a/item.html
+++ b/item.html
@@ -77,14 +77,7 @@
 
 <!--loading页结束-->
 <body style="background: #F2F2F2">
-<!--header star-->
-<!--<header class="mui-bar mui-bar-nav" id="header">-->
-<!--<a class="btn" href="javascript:history.go(-1)">-->
-<!--<i class="iconfont icon-fanhui"></i>-->
-<!--</a>-->
-<!--<h4>商品详情</h4>-->
-<!--</header>-->
-<!--header end-->
+<div class="contents" style="display:none">
 
 <div class="warp warptwo clearfloat">
     <div class="detail clearfloat">
@@ -99,17 +92,8 @@
         </div>
         <!--banner end-->
         <div class="top clearfloat box-s">
-            <!--<div class="shang clearfloat">-->
-                <!--<div class="zuo clearfloat fl over2 box-s">-->
-                    <!--单反相机，彰显你的风格-->
-                <!--</div>-->
-                <!--<div class="you clearfloat fr">-->
-                    <!--<i class="iconfont icon-fenxiang"></i>-->
-                    <!--<p>分享</p>-->
-                <!--</div>-->
-            <!--</div>-->
             <div class="xia clearfloat">
-                <p class="jifen fl box-s"><i  style="float: left;margin-top: .1rem;font-size: .5rem;" class="iconfont icon-renminbi"></i><samp>99.<small>00</small></samp>  <span class="through">320</span></p>
+                <p class="jifen fl box-s"><i  style="float: left;margin-top: .1rem;font-size: .5rem;margin-right: 0" class="iconfont icon-renminbi"></i><samp>99.<small>00</small></samp>  <span class="through">320</span></p>
                 <p class="fr"><i class="iconfont icon-icon--"></i><span>海光寺</span></p>
                 <span class="fr">已销900件</span>
             </div>
@@ -313,6 +297,7 @@
         </div>
     </div>
     <a href="shopcar.html" class="shop-btn db">确定</a>
+</div>
 </div>
 <script type="text/javascript">
     var down = document.getElementById("down");
