--- a/leve-info.html
+++ b/leve-info.html
@@ -82,7 +82,7 @@
                 </tr>
                 <tr class="tdline"><td colspan="2"><div class="line"></div></td></tr>
                 <tr>
-                    <td>金牌推广员</td>
+                    <td>金牌<br>推广员</td>
                     <td><span>可享受双倍佣金</span><small>成为临时推广员后，若推荐朋友单数达到5单即可在推广员有效期内升级为金牌推广员</small></td>
                 </tr>
                 <tr class="tdline"><td colspan="2"><div class="line"></div></td></tr>
