--- a/myorders.html
+++ b/myorders.html
@@ -78,6 +78,7 @@
 <!--loading页结束-->
 
 <body style="background: #F2F2F2">
+<div class="contents" style="display:none">
 <div class="warp warptwo clearfloat">
     <div class="detail clearfloat">
         <div class="tg_more">
@@ -334,6 +335,6 @@
         }
     </script>
 </div>
+</div>
 </body>
-
 </html>
