--- a/admin-orders.html
+++ b/admin-orders.html
@@ -5,14 +5,19 @@
     <title>订单</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" />
     <link rel="stylesheet" type="text/css" href="css/base.css" />
+    <link rel="stylesheet" type="text/css" href="css/detail.css"/>
+    <link rel="stylesheet" type="text/css" href="css/mui.min.css"/>
     <link rel="stylesheet" type="text/css" href="css/center.css" />
     <link rel="stylesheet" type="text/css" href="css/loaders.min.css"/>
     <link rel="stylesheet" type="text/css" href="css/loading.css"/>
-    <link rel="stylesheet" href="css/loading2.css">
+    <link rel="stylesheet" href="css/swiper.min.css">
     <link rel="stylesheet" type="text/css" href="css/main.css"/>
     <link rel="stylesheet" type="text/css" href="css/jcDate.css" media="all" />
-
+    <link rel="stylesheet" href="css/loading2.css">
     <script src="js/rem.js"></script>
+    <script src="js/jquery.min.js" type="text/javascript"></script>
+    <script src="js/others.js"></script>
+    <script src="js/swiper.jquery.min.js"></script>
     <script type="text/javascript">
         $(window).load(function(){
 
@@ -71,13 +76,13 @@
     <!--</path>-->
     </svg>
 </div>
-
 <!--loading页结束-->
 <body>
+<div class="contents" style="display:none">
 <div class="vip-club border_top_bottom">
     <div class="vip-account_body withorw_accout">
         <!--<a href="#"><span>2018年7月14日</span><i class="iconfont icon-jiantou1 fr"></i></a>-->
-        <input class="jcDate " value="2018-8-2" style="width:80%;    border: none;font-size: .5rem; padding:.5rem 0;" /><i class="iconfont icon-jiantou1 fr" style="margin-top: .5rem;"></i>
+        <input class="jcDate " value="2018-8-2" style="width:80%;font-weight: bold;border: none;font-size: .5rem; padding:.5rem 0;" /><i class="iconfont icon-jiantou1 fr" style="margin-top: .5rem;"></i>
     </div>
 </div>
 <div class="withorw">
@@ -125,7 +130,7 @@
     });
 
 </script>
-
+</div>
 </body>
 
 </html>
