--- a/failure.html
+++ b/failure.html
@@ -18,7 +18,7 @@
 <div class="error failure">
     <p><img src="images/failure.png"> </p>
     <h2>核销失败&nbsp;&nbsp;</h2>
-    <p>可能的原因：</br>核销码输入错误|订单已失效</p>
+    <p  style="margin-bottom: 1.2rem;">可能的原因：</br>核销码输入错误|订单已失效</p>
     <p><a href="javascript:location.reload()" style="">返回</a> </p>
 </div>
 </body>
