--- a/verify.html
+++ b/verify.html
@@ -78,6 +78,8 @@
 <!--loading页结束-->
 
 <body style="background: #F2F2F2">
+<div class="contents" style="display:none">
+
 <div class="warp warptwo clearfloat">
     <div class="detail clearfloat">
 
@@ -117,6 +119,7 @@
 <a href="javascript:(0)">取消</a>
         </div>
     </div>
+</div>
 </div>
 
 <script type="text/javascript">
